src/main/java/com/test/coursemanagementspring/core/common/errors/ValidationException.java
package com.test.coursemanagementspring.core.common.errors;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}
